--- a/diariodeclasse.com-allan.html
+++ b/diariodeclasse.com-allan.html
@@ -114,7 +114,7 @@
                                         <b> MENU</b>
                                     </div>
                                     <div class="menu">
-                                        <a href="nananenem.com-home.html" >Home</a>
+                                        <a href="diariodeclasse.com-home.html" >Home</a>
                                         <a href="#"style="background-color: #0072ff">Soneca do Allan</a>
                                         <a href="#">Episodio 2</a>
                                         <a href="#">Episodio 3</a>
