--- a/diariodeclasse.com-home.html
+++ b/diariodeclasse.com-home.html
@@ -115,7 +115,7 @@
                                     </div>
                                     <div class="menu">
                                         <a href="#" style="background-color: #0072ff">Home</a>
-                                        <a href="nananenem.com-allan.html">Soneca do Allan</a>
+                                        <a href="diariodeclasse.com-allan.html">Soneca do Allan</a>
                                         <a href="#">Episodio 2</a>
                                         <a href="#">Episodio 3</a>
                                         <a href="#">Episodio 4</a>
