--- a/diariodeclasse.com-home.html
+++ b/diariodeclasse.com-home.html
@@ -88,7 +88,7 @@
 
 <body>
     <table>
-        <tr>
+        <tr style="height: 10%;">
             <td colspan="2" style="text-align: center; color: white ;
                 font-family: Arial, sans-serif;
                 font-size: 60px;
@@ -103,7 +103,7 @@
         <tr>
 
             <td class="linha_central" style="width: 20%;">
-                <aside>
+                <aside >
 
                     <body>
                         <table>
@@ -115,7 +115,7 @@
                                     </div>
                                     <div class="menu">
                                         <a href="#" style="background-color: #0072ff">Home</a>
-                                        <a href="diariodeclasse.com-allan.html">Soneca do Allan</a>
+                                        <a href="diariodeclasse.com-allan.html">EP.01 Soneca do Allan</a>
                                         <a href="#">Episodio 2</a>
                                         <a href="#">Episodio 3</a>
                                         <a href="#">Episodio 4</a>
@@ -126,27 +126,27 @@
                     </body>
 
 </html>
-</aside>
+</aside >
 </td>
-<td>
-    <article class="linha_central">
+<td class="linha_central" style="vertical-align: middle">
+    <article style="vertical-align: middle;">
         <section style="text-align: center;vertical-align: middle;">
             <!-- Inclua aqui o conteúdo do seu artigo -->
-            <img src="img/DSM_FATEC.jpg" style="width: 58%; height: 58%; ">
+            <img src="img/DSM_FATEC.jpg" >
 
         </section>
     </article>
 </td>
 </tr>
-<tr style="height: 20%;">
+<tr style="height: 10%;">
     <td colspan="2"
         style="text-align: center;   vertical-align: middle;background-image:url(img/matriz_azul.gif); justify-items: auto;  ">
         <img src="img/facebook.png" style="width: 50px; height: 50px; ">
         <img src="img/instagram.png" style="width: 50px; height: 50px;">
         <img src="img/twitter.png" style="width: 50px; height: 50px; ">
-    </td> 
+    </td>
 
-</tr> 
+</tr>
 </table>
 </body>
 
