--- a/diariodeclasse.com-allan.html
+++ b/diariodeclasse.com-allan.html
@@ -88,7 +88,7 @@
 
 <body>
     <table>
-        <tr>
+        <tr style="height: 10%;">
             <td colspan="2" style="text-align: center; color: white ;
                 font-family: Arial, sans-serif;
                 font-size: 60px;
@@ -114,8 +114,8 @@
                                         <b> MENU</b>
                                     </div>
                                     <div class="menu">
-                                        <a href="diariodeclasse.com-home.html" >Home</a>
-                                        <a href="#"style="background-color: #0072ff">Soneca do Allan</a>
+                                        <a href="diariodeclasse.com-home.html">Home</a>
+                                        <a href="#" style="background-color: #0072ff">EP.01 Soneca do Allan</a>
                                         <a href="#">Episodio 2</a>
                                         <a href="#">Episodio 3</a>
                                         <a href="#">Episodio 4</a>
@@ -128,11 +128,11 @@
 </html>
 </aside>
 </td>
-<td>
+<td class="linha_central">
     <article class="linha_central">
         <section style="text-align: center;vertical-align: middle;">
             <!-- Inclua aqui o conteúdo do seu artigo -->
-            <video controls>
+            <video controls >
                 <source src="video/AllanDormindo.mp4" type="video/mp4">
             </video>
 
@@ -140,7 +140,7 @@
     </article>
 </td>
 </tr>
-<tr style="height: 20%;">
+<tr style="height: 10%;">
     <td colspan="2"
         style="text-align: center;   vertical-align: middle;background-image:url(img/matriz_azul.gif); justify-items: auto;  ">
         <img src="img/facebook.png" style="width: 50px; height: 50px; ">
