--- a/diariodeclasse.com-allan.html
+++ b/diariodeclasse.com-allan.html
@@ -128,8 +128,8 @@
 </html>
 </aside>
 </td>
-<td class="linha_central">
-    <article class="linha_central">
+<td class="linha_central" style="vertical-align: middle;">
+    <article >
         <section style="text-align: center;vertical-align: middle;">
             <!-- Inclua aqui o conteúdo do seu artigo -->
             <video controls >
