--- a/diariodeclasse.com-allan.html
+++ b/diariodeclasse.com-allan.html
@@ -103,7 +103,7 @@
         <tr>
 
             <td class="linha_central" style="width: 20%;">
-                <aside>
+                <aside >
 
                     <body>
                         <table>
@@ -114,8 +114,8 @@
                                         <b> MENU</b>
                                     </div>
                                     <div class="menu">
-                                        <a href="diariodeclasse.com-home.html">Home</a>
-                                        <a href="#" style="background-color: #0072ff">EP.01 Soneca do Allan</a>
+                                        <a href="#" style="background-color: #0072ff">Home</a>
+                                        <a href="diariodeclasse.com-allan.html">EP.01 Soneca do Allan</a>
                                         <a href="#">Episodio 2</a>
                                         <a href="#">Episodio 3</a>
                                         <a href="#">Episodio 4</a>
@@ -126,15 +126,13 @@
                     </body>
 
 </html>
-</aside>
+</aside >
 </td>
-<td class="linha_central" style="vertical-align: middle;">
-    <article >
+<td class="linha_central" style="vertical-align: middle">
+    <article style="vertical-align: middle;">
         <section style="text-align: center;vertical-align: middle;">
             <!-- Inclua aqui o conteúdo do seu artigo -->
-            <video controls >
-                <source src="video/AllanDormindo.mp4" type="video/mp4">
-            </video>
+            <img src="img/DSM_FATEC.jpg" >
 
         </section>
     </article>
